--- a/src/Pages/Adm/Adm.css
+++ b/src/Pages/Adm/Adm.css
@@ -17,6 +17,7 @@ img{
     border-radius: 3pc;
     width: 9pc;
     height: 2pc;
+    color: #121212;
 
 }
 #excluir{
@@ -25,6 +26,7 @@ img{
     border-radius: 3pc;
     width: 9pc;
     height: 2pc;
+    color: #121212;
 
 }
 #entrou{
@@ -33,6 +35,7 @@ img{
     border-radius: 3pc;
     width: 9pc;
     height: 2pc;
+    color: #121212;
 }
 
 #bts{
